# git-portfolio

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.rst  README.md  README.rst  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  docs.yml  release.yml  tests.yml
docs/: conf.py  contributing.md  index.md  index.rst  license.md  reference.md  reference.rst  requirements.txt  usage.md
src/: __main__.py  config_manager.py  prompt.py
src/git_portfolio/: __init__.py  __main__.py  config_manager.py  git_command.py  git_use_case.py  github_manager.py  github_service.py  local_manager.py  portfolio_manager.py  prompt.py  prompt_validation.py  response_objects.py  responses.py  views.py
src/git_portfolio/domain/: __init__.py  config.py  gh_connection_settings.py  issue.py  pull_request.py  pull_request_merge.py
src/git_portfolio/request_objects/: __init__.py  issue_list.py
src/git_portfolio/use_cases/: __init__.py  command_checker.py  config_init.py  config_init_use_case.py  config_repos.py  config_repos_use_case.py  gh.py  gh_close_issue.py  gh_create_issue.py  gh_create_issue_use_case.py  gh_create_pr.py  gh_create_pr_use_case.py  gh_delete_branch.py  gh_delete_branch_use_case.py  gh_list_issue.py  gh_merge_pr.py  gh_merge_pr_use_case.py  gh_reopen_issue.py  git.py  git_clone.py  git_clone_use_case.py  git_status_use_case.py  git_use_case.py  poetry.py
tests/: __init__.py  conftest.py  test_config_manager.py  test_git_command.py  test_git_use_case.py  test_github_manager.py  test_github_service.py  test_local_manager.py  test_main.py  test_prompt.py  test_prompt_validation.py  test_response_objects.py  test_responses.py  test_views.py
tests/domain/: __init__.py  test_config.py  test_gh_connection_settings.py  test_issue.py  test_pull_request.py  test_pull_request_merge.py
tests/requests/: test_issue_list.py
tests/use_cases/: __init__.py  test_command_checker.py  test_config_init.py  test_config_init_use_case.py  test_config_repos.py  test_config_repos_use_case.py  test_gh.py  test_gh_close_issue.py  test_gh_create_issue.py  test_gh_create_issue_use_case.py  test_gh_create_pr.py  test_gh_create_pr_use_case.py  test_gh_delete_branch.py  test_gh_delete_branch_use_case.py  test_gh_list_issue.py  test_gh_merge_pr.py  test_gh_merge_pr_use_case.py  test_gh_reopen_issue.py  test_git.py  test_git_clone.py  test_git_clone_use_case.py  test_git_status_use_case.py  test_git_use_case.py  test_poetry.py
