[tool.poetry]
name = "git-portfolio"
version = "0.14.0"
description = "Git Portfolio"
authors = ["Thiago Carvalho D'Ávila <thiagocavila@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/staticdev/git-portfolio"
repository = "https://github.com/staticdev/git-portfolio"
documentation = "https://git-portfolio.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.urls]
Changelog = "https://github.com/staticdev/git-portfolio/releases"

[tool.poetry.dependencies]
python = "^3.7.0"
click = ">=7,<9"
inquirer = "^2.7.0"
pyyaml = "^5.3.1"
"github3.py" = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.5"}
safety = "^1.10.0"
mypy = "^0.812"
typeguard = "^2.12.0"
xdoctest = "^0.15.4"
sphinx = "^4.0.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.11.1"
darglint = "^1.8.0"
reorder-python-imports = "^2.5.0"
pre-commit-hooks = "^4.0.1"
pytest_mock = "^3.6.1"
black = "^21.5b1"
sphinx-click = "^3.0.0"

[tool.poetry.scripts]
gitp = "git_portfolio.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["git_portfolio"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
