[tool.poetry]
name = "git-portfolio"
version = "1.1.0"
description = "Git Portfolio"
authors = ["staticdev <staticdev-support@proton.me>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/staticdev/git-portfolio"
repository = "https://github.com/staticdev/git-portfolio"
documentation = "https://git-portfolio.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.urls]
Changelog = "https://github.com/staticdev/git-portfolio/releases"

[tool.poetry.dependencies]
# <4 because of pending https://github.com/terrencepreilly/darglint/pull/190
python = ">=3.9.0,<4"
click = ">=7,<9"
"github3.py" = ">=3.2.0"
inquirer = ">=2.10.1"
pyyaml = ">=5.3.1"

[tool.poetry.dev-dependencies]
bandit = ">=1.7.4"
black = ">=22.6.0"
coverage = {version = "6.5.0", extras = ["toml"]}
darglint = ">=1.8.1"
mypy = ">=0.991"
safety = ">=2.3.1"
sphinx = ">=5.1.1"
sphinx-autobuild = ">=2021.3.14"
typeguard = ">=2.13.3"
xdoctest = ">=1.1.0"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
flake8-bugbear = "^22.10.27"
flake8-docstrings = "^1.6.0"
pep8-naming = "^0.13.2"
pytest = "^7.2.0"
pre-commit-hooks = "^4.3.0"
pytest_mock = "^3.10.0"
sphinx-click = "^4.3.0"
types-PyYAML = "^6.0.12"
pyupgrade = "^3.2.2"
furo = ">=2021.11.12"

[tool.poetry.scripts]
gitp = "git_portfolio.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["git_portfolio", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = ["github3.*", "inquirer", "pytest_mock"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
